--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ubuntu@${{ secrets.PUBLIC_IP }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/aws_fastAPI.pem ubuntu@${{ secrets.PUBLIC_IP }} << 'EOF'
             cd /home/ubuntu/fastapi-book-project
             git pull origin main
             source venv/bin/activate
