--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,10 @@
-name: Pull Request
-
+name: Test
 on:
   pull_request:
     branches:
       - main
-
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,13 +12,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: "3.12"
       - name: Install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-      - name: Run tests
+      - name: Run Tests
         run: |
-            source venv/bin/activate 
-            pytest
+          source venv/bin/activate
+          pytest
