preparing a telex integration

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,33 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m venv venv
+          source venv/scripts/activate
           pip install -r requirements.txt
 
       - name: Run Tests
         run: |
           pytest
+
+      - name: Notify Telex of Test Success
+        if: success()
+        run: |
+          curl -X POST -H "Content-Type: application/json" -d '{
+          "event_name": "ci_pipeline",
+          "username": "GitHub Actions",
+          "status": "success",
+          "message":"✅ Tests passed successfully for PR ${{github.event.pull_request.number}}."
+          }'${{secrets.TARGET_URL}}
+
+
+      - name: Notify Telex of Test Failure
+        if: failure()
+        run:  |
+          curl -X POST -H "Content-Type: application/json" -d '{
+          "event_name": "ci_pipeline",
+          "username": "GitHub Actions",
+          "status": "failure",
+          "message": "❌ Test failed for PR ${{github.event.pull_request.number}}."
+          }'${{secrets.TARGET_URL}}
+
+
