--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m venv venv
-          source venv/scripts/activate
+          source venv/bin/activate
           pip install -r requirements.txt
 
       - name: Run Tests
