--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           "username": "GitHub Actions",
           "status": "success",
           "message":"✅ Tests passed successfully for PR ${{github.event.pull_request.number}}."
-          }'${{secrets.TELEX_WEBHOOK}}
+          }'${{secrets.SLACK_WEBHOOK_URL}}
 
 
       - name: Notify Telex of Test Failure
@@ -46,6 +46,6 @@ jobs:
           "username": "GitHub Actions",
           "status": "failure",
           "message": "❌ Test failed for PR ${{github.event.pull_request.number}}."
-          }'${{secrets.TELEX_WEBHOOK}}
+          }'${{secrets.SLACK_WEBHOOK_URL}}
 
 
